# sigir2026-score-distribution-modeling

./: README.md  pyproject.toml
results/exact/e5/: document.json  passage.json
results/exact/snowflake/: document.json  passage.json
src/sdm/: config.py  sdm.py
src/sdm/cli/: ablation_study.py  beir.py  core.py  core_exact.py
src/sdm/model_wrappers/: __init__.py
src/sdm/utils/: __init__.py  encoding.py  score_distribution.py  similarity.py
